--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="middle-section">
                 <input class="search-bar" type="text" placeholder="Search">
                 <button class="search-button">
-                    <img class="search-icon" src="icons/search.svg">
+                    <img class="search-icon" src="icons/Search.svg">
                     <div class="tooltip">Search</div>
                 </button>
                 <button class="voice-button">
